FIX: community list 조회에서 commentCount, likeCount를 같이 조회할 수 있도록 api 수정